# highway-pursuit-gym

./: .gitignore  README.md  highway-pursuit-server.sln
examples/: .gitignore  README.md  ppo-highway-pursuit.py  requirements.txt
highway-pursuit-gym/: .gitignore  README.md  __init__.py  setup.py  test-requirements.txt  test.py
highway-pursuit-launcher/: Program.cs  highway-pursuit-launcher.csproj
highway-pursuit-server/: .gitignore  CMakeLists.txt  D3D8.cs  InjectionEntryPoint.cs  README.md  highway-pursuit-server.csproj
highway-pursuit-server-2/: .gitignore  (+1 more)
highway-pursuit-server/Injected/: CheatService.cs  D3D8Service.cs  EpisodeService.cs  GameManager.cs  IHookManager.cs  InputService.cs  MemoryAdresses.cs  NewGameService.cs  ResetService.cs  ScoreService.cs  UpdateService.cs
highway-pursuit-server/Server/: GameManager.cs  HighwayPursuitServer.cs  HookManager.cs  IHookManager.cs
highway-pursuit-server/highway-pursuit-launcher/: CMakeLists.txt  HighwayPursuitLauncher.cpp  Injection.cpp  Injection.hpp  Program.cs  highway-pursuit-launcher.csproj  highway-pursuit-launcher.vcxproj  highway-pursuit-launcher.vcxproj.filters
highway-pursuit-server/highway-pursuit-server/: CMakeLists.txt  CommunicationManager.cpp  CommunicationManager.hpp  HPLogger.hpp  HighwayPursuitServer.cpp  HighwayPursuitServer.hpp  HookManager.cpp  HookManager.hpp  InjectionEntryPoint.cs  Logger.cs  README.md  dllmain.cpp  highway-pursuit-server.csproj  highway-pursuit-server.vcxproj  highway-pursuit-server.vcxproj.filters
highway-pursuit-server/highway-pursuit-server/Data/: D3D8.hpp  D3D8Types.cs  HighwayPursuitData.cs  HighwayPursuitTypes.cs  RemoteDatatypes.cs  ServerOptions.cs  ServerParams.cs  ServerTypes.hpp
highway-pursuit-server/highway-pursuit-server/Exceptions/: HighwayPursuitException.cs
highway-pursuit-server/highway-pursuit-server/Injected/: CheatService.cpp  CheatService.cs  CheatService.hpp  D3D8Service.cs  EpisodeService.cpp  EpisodeService.cs  InputService.cpp  InputService.cs  InputService.hpp  MemoryAddresses.hpp  MemoryAdresses.cs  RenderingService.cpp  RenderingService.cs  RenderingService.hpp  ScoreService.cs  ScoreService.hpp  UpdateService.cpp  UpdateService.cs  UpdateService.hpp  WindowService.cpp  WindowService.hpp
highway-pursuit-server/highway-pursuit-server/Server/: CommunicationManager.cs  HighwayPursuitServer.cs  HookManager.cs  IHookManager.cs  ServerInterface.cs
highway-pursuit-server/minhook/: MinHook.vcxproj.filters
(+67 files in other folders)
